--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.13.2",
+    "jquery": "^3.3.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-google-maps": "^9.4.5",
+    "react-grid-gallery": "^0.5.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.4"
   },
   "scripts": {
